--- a/gallery.html
+++ b/gallery.html
@@ -63,7 +63,7 @@
         </div>
        
         <div class="carousel-item" data-bs-interval="4000">
-          <img src="/f6.jpg" class="d-block w-100" alt="...">
+          <img src="f6.jpg" class="d-block w-100" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
